fixes left and right white space issues on index page

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -44,17 +44,16 @@ p {
 }
 
 .container-fluid {
-    margin: 0 auto;
+    margin: 0 15px;
     padding: 0;
+    width: 100%;
 }
+
 
 #index-heading {
     background-color: rgb(109, 194, 233);
     height: 600px;
-    width: 100%;
     position: relative;
-    padding: 0;
-    margin: 0;
 }
 
 #index-heading h1 {
@@ -223,21 +222,15 @@ blockquote cite {
     padding-bottom: 75px;
 }
 
-#footer-wrapper {
-    min-height: 100%;
-    margin: 0;
-    width: 100%;
-}
 
 .footer {
     background-color: #e3e3e3;
     color: rgb(255,255,255); 
     position: relative;
-    margin: -60px 0 0 0;
+    margin-top: -60px;
     height: 60px;
     clear: both;
-    padding-top: 20px;
-    width: 100%;
+    padding: 20px 0 0 0;
 }
 
 #about-foot {
